--- a/public/styles.css
+++ b/public/styles.css
@@ -53,3 +53,13 @@ body, .quote-input {
 .quote-input:focus {
     border-color: black;
 }
+
+
+#canvas-section {
+    padding: 1%;
+    background-color: white;
+}
+
+#can {
+    border-style: solid;
+}
