--- a/public/styles.css
+++ b/public/styles.css
@@ -53,3 +53,11 @@ body, .quote-input {
 .quote-input:focus {
     border-color: black;
 }
+
+.correct {
+    color: green;
+}
+
+.incorrect {
+    color: red;
+}
