--- a/public/styles.css
+++ b/public/styles.css
@@ -15,6 +15,7 @@ body, .quote-input {
     font-family: 'Gill Sans', 'Gill Sans MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif';
 }
 
+
 .container {
     display: flex;
     flex-direction: column;
@@ -38,6 +39,7 @@ body, .quote-input {
     margin-left: calc(1rem + 2px);
     margin-left: calc(1rem + 2px);
     padding: 5%;
+    min-width: 50%;
 }
 
 
@@ -83,7 +85,8 @@ span {
 
 #user-area {
     margin-top: 2.5%;
-    width: 100%;
+    width: 115%;
+    min-width: 75%;
 }
 
 #input-result {
@@ -95,6 +98,25 @@ span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-basis: auto;
     margin-left: 10%;
     margin-right: 10%;
+}
+
+#user-button {
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+button {
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+#input-result {
+    height: 75px;
 }
