--- a/public/styles.css
+++ b/public/styles.css
@@ -3,18 +3,47 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     min-height: 100vh;
     margin: 0;
-    background-color: black;
+    background-color: rgb(58, 6, 58);
 }
 
 body, .quote-input {
     font-family: 'Gill Sans', 'Gill Sans MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif';
 }
 
+#menu {
+    flex-direction: column;
+    justify-content: center;
+}
+#title {
+    padding: 1% 1% 1% 1%;
+    background-color: #62008F;
+    border-radius: 50px;
+    border: 5px solid #F9ACAC;
+    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.25);
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%
+}
+
+#menu-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+#title h1 {
+    text-align: center;
+    font-size: 100pt;
+    color: white;
+    font-family: "Inter";
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
+}
 
 .container {
     display: flex;
@@ -27,11 +56,15 @@ body, .quote-input {
 }
 
 .timer {
-    position: absolute;
+    /* position: absolute; */
     top: 2rem;
     font-size: 3rem;
     color: aquamarine;
     font-weight: bold;
+}
+
+.container {
+    border: 5px solid #F9ACAC;
 }
 
 .quote-display {
@@ -80,6 +113,7 @@ span {
 }
 
 #can {
+    background-color: white;
     border-style: solid;
 }
 
@@ -109,14 +143,32 @@ span {
 }
 
 button {
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
     padding-left: 100px;
     padding-right: 100px;
-    margin-top: 1%;
+    margin-top: 0.5%;
     margin-bottom: 1%;
+    background: #240035;
+    box-shadow: 0px 2px 10px rgba(169, 145, 220, 0.4);
+    border-radius: 50px;
+    border: 5px solid #F9ACAC;
+    color: white;
+    font-size: 12pt;
+}
+
+button:hover {
+    background: #4f0074;
+}
+
+button:active {
+    background: #F9ACAC;
 }
 
 #input-result {
     height: 75px;
+}
+
+.hidden {
+    display: none !important;
 }
